Fix crash when switching from dialog to wizard with nested components and preview

BUG: 505364