rkward/plugin/rkstandardcomponent.cpp
@@ -647,11 +647,9 @@ void RKComponentBuilder::buildElement(const QDomElement &element, XMLHelper &xml
 			widget = new RKText(e, component(), parent_widget);
 		} else if (e.tagName() == QLatin1String("preview")) {
 			QWidget *pwidget = parent_widget;
-			if (!parent->isWizardish()) {
-				RKStandardComponent *uicomp = parent->topmostStandardComponent();
-				if (uicomp) {
-					parent_widget = static_cast<RKStandardComponent *>(uicomp)->gui->custom_preview_buttons_area;
-				}
+			RKStandardComponent *uicomp = parent->topmostStandardComponent();
+			if (uicomp && !uicomp->isWizardish()) {
+				parent_widget = static_cast<RKStandardComponent *>(uicomp)->gui->custom_preview_buttons_area;
 			}
 			widget = new RKPreviewBox(e, component(), parent_widget);
 			parent_widget->layout()->addWidget(widget);
